# project-kepler-elastic

./: .gitignore  LICENSE  README.md
backend/: app.py  pyproject.toml  requirements.txt
backend/scripts/: combine_data.py  create_index.py  download_arxiv.py  download_simbad.py  ingest_arxiv_data.py  ingest_combined_data.py  inspect_index.py  test_keyword.py  test_queries.py
backend/src/app/: config.py  elastic.py  llm.py  main.py  tools.py
backend/tests/: conftest.py  test_elastic.py  test_llm.py  test_main.py  test_tools.py
